# PWHL-Scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  top_scorers.csv
examples/: example_1.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py
pwhl_scraper/: cli.py
pwhl_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pwhl_scraper/api/: client.py
pwhl_scraper/database/: db_manager.py  models.py
pwhl_scraper/scrapers/: basic_info.py  games.py  play_by_play.py  players.py  playoffs.py  stats.py
tests/: __init__.py  test_api.py  test_scrapers.py
