[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PWHL-Scraper"
dynamic = ["version"]
description = "Data scraper and API for PWHL (Professional Women's Hockey League) statistics"
readme = "README.md"
authors = [
    { name = "Isabelle Lefebvre", email = "ilefe071@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.6"
dependencies = [] # These will be automatically read from requirements.txt

[project.urls]
"Homepage" = "https://github.com/IsabelleLefebvre97/pwhl-scraper"
"Source" = "https://github.com/IsabelleLefebvre97/pwhl-scraper"
"Bug Tracker" = "https://github.com/IsabelleLefebvre97/pwhl-scraper/issues"

[project.scripts]
pwhl-scraper = "pwhl_scraper.cli:main"

[tool.setuptools]
packages = ["pwhl_scraper"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "pwhl_scraper.__version__" }
